# dictionary_server

./: CMakeLists.txt  README.md  build.sh
ProxyServer/: .gitignore  CMakeLists.txt  Configure.cc  Configure.h  Dispatcher.h  ProtobufCodec.cc  ProtobufCodec.h  ProxyServer.cc  ProxyServer.h  README.md  main.cc
ProxyServer/DAL/: CMakeLists.txt  Hiredis.cc  Hiredis.h  HiredisPool.cc  HiredisPool.h
ProxyServer/HashKit/: CMakeLists.txt  HashKit.h  crc16.c  crc32.c  fnv.c  hsieh.c  jenkins.c  ketama.c  md5.c  modula.c  murmur.c  one_at_a_time.c  random.c
ProxyServer/Message/: CMakeLists.txt  Query.pb.cc  Query.pb.h  Query.proto
dict/: coec_pctr2.txt  coec_pcvr2.txt  intelligent_rec_tag_solution_file2.txt
public/: CMakeLists.txt  ConservatorHandler.cc  ConservatorHandler.h  JInStream.cpp  NodeManager.cc  NodeManager.h
sender/: CMakeList.txt  CMakeLists.txt  Client.cpp  Client.h  build.sh  main.cpp
sender/UI/: BalanceInquiryForm.cpp  CloseAccountForm.cpp  LoginForm.cpp
sender/cmd/: CloseAccount.cpp
sender/src/: CMakeLists.txt  ClientConfig.h  DicClient.h  SendSession.cc  SendSession.h  TransferManager.cc  TransferManager.h  main.cc
sender/src/cmd/: PreRankScore.cc  PreRankScore.h  TransferAction.h
sender/src/dictionary/: PreRankScoreDic.cc  PreRankScoreDic.h
sender/src/frame/: CMakeLists.txt  Client.cc  Client.h  ClientConfig.cc  ClientConfig.h  ConnectPool.cc  ConnectPool.h  DicClient.cc  DicClient.h  DispatchServer.cc  DispatchServer.h  Node.h  NodeManager.cc  NodeManager.h  Peer.cc  Peer.h  Scanner.cc  Scanner.h  TreeNode.h  (+2 more)
sender/tests/: ClientTest.cc
(+2 files in other folders)
